<resources>
  <string name="app_name">Guess</string>
  <string name="ok">ok</string>
  <string name="please_enter_a_number">Please enter a number(1~10)</string>
  <string name="yes_you_get_it">Yes, you get it</string>
  <string name="bigger">Bigger</string>
  <string name="smaller">Smaller</string>
  <string name="message">Message</string>
  <string name="replay_game">Replay game</string>
  <string name="are_you_sure">Are you sure?</string>
  <string name="cancel">Cancel</string>
  <string name="excellent">Excellent! The number is %d</string>
</resources>
